<resources>
    <string name="app_name">BorrowBook</string>
    <string name="borrow_book">借书</string>
    <string name="reader">读者：</string>
    <string name="input_name">请输入姓名</string>
    <string name="sex">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="borrow_time">借出时间：</string>
    <string name="input_borrow_time">请输入借书时间</string>
    <string name="return_time">归还时间：</string>
    <string name="return_time_show">2016.06.30</string>
    <string name="hobby">爱好：</string>
    <string name="history">历史</string>
    <string name="suspense">悬疑</string>
    <string name="literary">文艺</string>
    <string name="age">年龄：</string>
    <string name="age_show">18</string>
    <string name="age_max">100</string>
    <string name="book_name">书名</string>
    <string name="book_type">类型</string>
    <string name="book_for_age">适读年龄</string>
    <string name="search">查找</string>
    <string name="next">下一个</string>
    <string name="no_name">您未输入姓名！</string>
    <string name="no_borrow_time">您未输入借阅时间！</string>
    <string name="no_choose_sex">您未选择性别！</string>
    <string name="time_error">借书的年份晚于还书时间，退出</string>
    <string name="find_no_book">未找到适合的读物！</string>
    <string name="book_number">符合条件的书有%1$s本</string>
    <string name="show_end">因为已到末尾，所以从头显示</string>

</resources>
