<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD9EC"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/borrow_book"
        android:textColor="@color/mediumpurple"
        android:textSize="25sp"
        android:typeface="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/reader"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_reader"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/input_name"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/sex"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/rg_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="20dp"
                android:text="@string/male"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/female"
                android:textColor="@color/black" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/borrow_time"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_borrow_time"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_borrow_time"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_time"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_time_show"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/hobby"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/cb_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/cb_suspense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suspense"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/cb_literary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/literary"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="100dp"
            android:text="@string/age"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_age_show"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/age_show"
            android:textColor="@color/black" />

        <SeekBar
            android:id="@+id/sb_change_age"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:max="100"
            android:min="6"
            android:progress="18"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_max"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/oldlace"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_book"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:background="@drawable/f"
            android:layout_marginEnd="10dp"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_book_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_name" />

            <TextView
                android:id="@+id/tv_book_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/book_type" />

            <TextView
                android:id="@+id/tv_book_for_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/book_for_age" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_search"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:background="@color/mediumpurple"
            android:text="@string/search"
            tools:ignore="ButtonStyle" />

        <TextView
            android:id="@+id/tv_book_num"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:textSize="12sp"
            tools:text="@string/book_number" />

        <Button
            android:id="@+id/bt_next"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:background="@color/mediumpurple"
            android:enabled="false"
            android:text="@string/next"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>